# multiNN-cpu

./: CMakeLists.txt  README.md  neuron.cpp  singleNN.cpp  singleNN.h
multi-class-NN/: hidden_layer.cpp  hidden_layer.h  layer.cpp  layer.h  layerWrappers.cpp  layerWrappers.h  neuralNetwork.cpp  neuralNetwork.h  neuron.cpp  neuron.h  trainTest1.cpp
multi-class-NN/dataset1/: data_processing1.py  testFile.cpp
